<?xml version="1.0" encoding="utf-8"?>
<!--
//
// Name                 Niklas Olsson
// Student ID           S1434184
// Programme of Study   Computing
//
-->
<resources>
    <string name="app_name">S1434184</string>
    <string name="earthquake_location">Location</string>
    <string name="earthquake_magnitude">Magnitude</string>
    <string name="earthquake_date">Date</string>
    <string name="earthquake_time">Time</string>
    <string name="earthquake_depth">Depth</string>
    <string name="earthquake_coordinates">Coordinates</string>
    <string name="earthquake_link">Link</string>
    <string name="earthquake_details">Details</string>
    <string name="magnitude_symbol">M %s</string>
    <string name="activity_search">Search</string>
    <string name="action_date">Date</string>
    <string name="action_sort">Sort</string>
    <string name="action_recent">Most Recent</string>
    <string name="action_alphabetically">Sort Alphabetically</string>
    <string name="action_Az">(A - Z)</string>
    <string name="action_Za">(Z - A)</string>
    <string name="action_magnitude">Sort Magnitude</string>
    <string name="action_highest">(High - Low)</string>
    <string name="action_lowest">(Low - High)</string>
    <string name="action_depth">Sort Depth</string>
    <string name="action_coordinates">Sort Coordinates</string>
    <string name="action_north">Most Northerly</string>
    <string name="action_east">Most Easterly</string>
    <string name="action_south">Most Southerly</string>
    <string name="action_west">Mostly Westerly</string>
    <string name="title_activity_earthquake">Earthquake Activity</string>
    <string name="searchable_hint">Enter location</string>
    <string name="datepicker">Select date</string>
</resources>
