<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.niklas.gcu.moblieplatformcw.MainActivity">
    <item
        android:id="@+id/action_recent"
        android:orderInCategory="3"
        android:title="@string/action_recent"
        app:showAsAction="collapseActionView" />
    <item
        android:id="@+id/action_A-z"
        android:orderInCategory="5"
        android:title="@string/action_Az"
        app:showAsAction="collapseActionView" />
    <item
        android:id="@+id/action_magnitude"
        android:orderInCategory="6"
        android:title="@string/action_magnitude"
        app:showAsAction="collapseActionView" />
    <item
        android:id="@+id/action_depth"
        android:orderInCategory="7"
        android:title="@string/action_depth"
        app:showAsAction="collapseActionView" />
    <item
        android:id="@+id/action_coordinates"
        android:orderInCategory="8"
        android:title="@string/action_coordinates"
        app:showAsAction="collapseActionView">
        <menu>
            <group android:id="@+id/group2">
                <item
                    android:id="@+id/action_north"
                    android:title="@string/action_north" />
                <item
                    android:id="@+id/action_south"
                    android:title="@string/action_south" />
                <item
                    android:id="@+id/action_east"
                    android:title="@string/action_east" />
                <item
                    android:id="@+id/action_west"
                    android:title="@string/action_west" />
            </group>
        </menu>
    </item>
    <item
        android:id="@+id/action_date"
        android:icon="@android:drawable/ic_menu_my_calendar"
        android:orderInCategory="2"
        android:title="@string/action_date"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_search"
        android:orderInCategory="1"
        android:title="@string/activity_search"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="ifRoom" />
</menu>
